// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Primary 1`] = `
<button
  className="button primary"
  onClick={[Function]}
>
  Button text
</button>
`;

exports[`Storyshots Button With Content 1`] = `
<button
  className="button primary"
  onClick={[Function]}
>
  Button text
</button>
`;

exports[`Storyshots FilteredGrid With Content 1`] = `
<div
  className="filtered_grid"
>
  <div
    className="grid"
    style={
      Object {
        "gridTemplateColumns": "repeat(3, 1fr)",
      }
    }
  >
    <div
      className="input_box"
    >
      <div
        className="input_icon"
      >
        <svg
          baseProfile="tiny"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          version="1.2"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13 4c-3.859 0-7 3.141-7 7 0 .763.127 1.495.354 2.183l-.749.75-.511.512-1.008 1.045c-.562.557-.891 1.345-.891 2.185 0 1.727 1.404 3.131 3.13 3.131.757 0 1.504-.278 2.104-.784l.064-.055.061-.061 1.512-1.51.75-.749c.688.226 1.421.353 2.184.353 3.859 0 7-3.141 7-7s-3.141-7-7-7zm0 12c-2.757 0-5-2.243-5-5s2.243-5 5-5 5 2.243 5 5-2.243 5-5 5zM13 7c-2.205 0-4 1.794-4 4s1.795 4 4 4 4-1.794 4-4-1.795-4-4-4zm0 7c-1.656 0-3-1.344-3-3s1.344-3 3-3 3 1.344 3 3-1.344 3-3 3z"
          />
        </svg>
      </div>
      <input
        className="text_input with-icon"
        name="text"
        onChange={[Function]}
        placeholder="Search items"
        value=""
      />
    </div>
  </div>
  <div
    className="grid"
    style={
      Object {
        "gridTemplateColumns": "repeat(3, 1fr)",
      }
    }
  >
    <div
      className="grid_item"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <p>
        Text 1
      </p>
    </div>
    <div
      className="grid_item"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <p>
        Text 2
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid With Content 1`] = `
<div
  className="grid"
  style={
    Object {
      "gridTemplateColumns": "repeat(1, 1fr)",
    }
  }
>
  <div
    className="grid_item"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <p>
      Item 1
    </p>
  </div>
  <div
    className="grid_item"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <p>
      Item 2
    </p>
  </div>
</div>
`;

exports[`Storyshots Grid With Content 3 Columns 1`] = `
<div
  className="grid"
  style={
    Object {
      "gridTemplateColumns": "repeat(3, 1fr)",
    }
  }
>
  <div
    className="grid_item"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <p>
      Item 1
    </p>
  </div>
  <div
    className="grid_item"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <p>
      Item 2
    </p>
  </div>
</div>
`;

exports[`Storyshots GridItem With Complex Content 1`] = `
<div
  className="grid_item"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    style={
      Object {
        "backgroundColor": "#22958b",
        "display": "flex",
        "justifyContent": "center",
        "padding": "4em",
      }
    }
  >
    <div>
      <style>
        .hollowLoader {
  width: 3em;
  height: 3em;
  -webkit-animation: loaderAnim 1.25s infinite ease-in-out;
  animation: loaderAnim 1.25s infinite ease-in-out;
  outline: 1px solid transparent;
}
.hollowLoader .largeBox {
  height: 3em;
  width: 3em;
  background-color: #ECECEC;
  outline: 1px solid transparent;
  position: fixed;
}
.hollowLoader .smallBox {
  height: 3em;
  width: 3em;
  background-color: #22958b; //Change to colour of background
  position: fixed;
  z-index: 1;
  outline: 1px solid transparent;
  -webkit-animation: smallBoxAnim 1.25s alternate infinite ease-in-out;
  animation: smallBoxAnim 1.25s alternate infinite ease-in-out;
}
@-webkit-keyframes smallBoxAnim {
  0% {
    -webkit-transform: scale(0.2);
    transform: scale(0.2);
  }
  100% {
    -webkit-transform: scale(0.75);
    transform: scale(0.75);
  }
}
@keyframes smallBoxAnim {
  0% {
    -webkit-transform: scale(0.2);
    transform: scale(0.2);
  }
  100% {
    -webkit-transform: scale(0.75);
    transform: scale(0.75);
  }
}
@-webkit-keyframes loaderAnim {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(90deg);
    transform: rotate(90deg);
  }
}
@keyframes loaderAnim {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(90deg);
    transform: rotate(90deg);
  }
}
      </style>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "<div class=\\"hollowLoader\\">
  <div class=\\"largeBox\\"></div>
  <div class=\\"smallBox\\"></div>
</div>",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots GridItem With Content 1`] = `
<div
  className="grid_item"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <p>
    Content
  </p>
</div>
`;

exports[`Storyshots GridItem With Content Title 1`] = `
<div
  className="grid_item"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <p>
    Content
  </p>
  <div
    className="grid_item_title"
  >
    <p>
      Title content
    </p>
  </div>
</div>
`;

exports[`Storyshots InputBox With All Props 1`] = `
<div
  className="input_box"
>
  <div
    className="input_icon"
  >
    <svg
      baseProfile="tiny"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      version="1.2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M17 9c0-1.381-.56-2.631-1.464-3.535-.905-.905-2.155-1.465-3.536-1.465s-2.631.56-3.536 1.465c-.904.904-1.464 2.154-1.464 3.535s.56 2.631 1.464 3.535c.905.905 2.155 1.465 3.536 1.465s2.631-.56 3.536-1.465c.904-.904 1.464-2.154 1.464-3.535zM6 19c0 1 2.25 2 6 2 3.518 0 6-1 6-2 0-2-2.354-4-6-4-3.75 0-6 2-6 4z"
      />
    </svg>
  </div>
  <input
    className="text_input with-icon"
    name="text"
    onChange={[Function]}
    placeholder="Placeholder text"
    value=""
  />
</div>
`;

exports[`Storyshots InputBox With Basic Props 1`] = `
<div
  className="input_box"
>
  <input
    className="text_input "
    name="text"
    onChange={[Function]}
    placeholder="Placeholder text"
    value=""
  />
</div>
`;

exports[`Storyshots InputBox With Clear Button 1`] = `
<div
  className="input_box"
>
  <input
    className="text_input "
    name="text"
    onChange={[Function]}
    placeholder="Placeholder text"
    value=""
  />
</div>
`;

exports[`Storyshots InputBox With Icon 1`] = `
<div
  className="input_box"
>
  <div
    className="input_icon"
  >
    <svg
      baseProfile="tiny"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      version="1.2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M17 9c0-1.381-.56-2.631-1.464-3.535-.905-.905-2.155-1.465-3.536-1.465s-2.631.56-3.536 1.465c-.904.904-1.464 2.154-1.464 3.535s.56 2.631 1.464 3.535c.905.905 2.155 1.465 3.536 1.465s2.631-.56 3.536-1.465c.904-.904 1.464-2.154 1.464-3.535zM6 19c0 1 2.25 2 6 2 3.518 0 6-1 6-2 0-2-2.354-4-6-4-3.75 0-6 2-6 4z"
      />
    </svg>
  </div>
  <input
    className="text_input with-icon"
    name="text"
    onChange={[Function]}
    placeholder="Placeholder text"
    value=""
  />
</div>
`;

exports[`Storyshots Loader With Content 1`] = `
<div>
  <style>
    .hollowLoader {
  width: 3em;
  height: 3em;
  -webkit-animation: loaderAnim 1.25s infinite ease-in-out;
  animation: loaderAnim 1.25s infinite ease-in-out;
  outline: 1px solid transparent;
}
.hollowLoader .largeBox {
  height: 3em;
  width: 3em;
  background-color: #ECECEC;
  outline: 1px solid transparent;
  position: fixed;
}
.hollowLoader .smallBox {
  height: 3em;
  width: 3em;
  background-color: #22958b; //Change to colour of background
  position: fixed;
  z-index: 1;
  outline: 1px solid transparent;
  -webkit-animation: smallBoxAnim 1.25s alternate infinite ease-in-out;
  animation: smallBoxAnim 1.25s alternate infinite ease-in-out;
}
@-webkit-keyframes smallBoxAnim {
  0% {
    -webkit-transform: scale(0.2);
    transform: scale(0.2);
  }
  100% {
    -webkit-transform: scale(0.75);
    transform: scale(0.75);
  }
}
@keyframes smallBoxAnim {
  0% {
    -webkit-transform: scale(0.2);
    transform: scale(0.2);
  }
  100% {
    -webkit-transform: scale(0.75);
    transform: scale(0.75);
  }
}
@-webkit-keyframes loaderAnim {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(90deg);
    transform: rotate(90deg);
  }
}
@keyframes loaderAnim {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(90deg);
    transform: rotate(90deg);
  }
}
  </style>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<div class=\\"hollowLoader\\">
  <div class=\\"largeBox\\"></div>
  <div class=\\"smallBox\\"></div>
</div>",
      }
    }
  />
</div>
`;

exports[`Storyshots LoaderSelection Element 1`] = `
<div
  className="loader_selection"
>
  <div
    className="filtered_grid"
  >
    <div
      className="grid"
      style={
        Object {
          "gridTemplateColumns": "repeat(1, 1fr)",
        }
      }
    >
      <div
        className="input_box"
      >
        <div
          className="input_icon"
        >
          <svg
            baseProfile="tiny"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            version="1.2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13 4c-3.859 0-7 3.141-7 7 0 .763.127 1.495.354 2.183l-.749.75-.511.512-1.008 1.045c-.562.557-.891 1.345-.891 2.185 0 1.727 1.404 3.131 3.13 3.131.757 0 1.504-.278 2.104-.784l.064-.055.061-.061 1.512-1.51.75-.749c.688.226 1.421.353 2.184.353 3.859 0 7-3.141 7-7s-3.141-7-7-7zm0 12c-2.757 0-5-2.243-5-5s2.243-5 5-5 5 2.243 5 5-2.243 5-5 5zM13 7c-2.205 0-4 1.794-4 4s1.795 4 4 4 4-1.794 4-4-1.795-4-4-4zm0 7c-1.656 0-3-1.344-3-3s1.344-3 3-3 3 1.344 3 3-1.344 3-3 3z"
            />
          </svg>
        </div>
        <input
          className="text_input with-icon"
          name="text"
          onChange={[Function]}
          placeholder="Search loaders"
          value=""
        />
      </div>
    </div>
    <div
      className="grid"
      style={
        Object {
          "gridTemplateColumns": "repeat(1, 1fr)",
        }
      }
    >
      <div
        className="grid_item"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <a
          href="/loaders/square"
          onClick={[Function]}
          style={
            Object {
              "margin": 0,
            }
          }
        >
          <div
            className="loader_container"
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#d74b48",
                "display": "flex",
                "flex": "1",
                "height": "10em",
                "justifyContent": "center",
              }
            }
          >
            <div>
              <style>
                .squareLoader {
    max-width: 4em;
}
.squareLoader .square {
  height: 2em;
  width: 2em;
  background-color: white;
  float: right;
  animation: squareanim 3s infinite;
}
.squareLoader .square:nth-child(1) {
  float: left;
}
.squareLoader .square:nth-child(1) {
  animation-delay: 0.3s;
}
.squareLoader .square:nth-child(2) {
  animation-delay: 0.6s;
}
.squareLoader .square:nth-child(3) {
  animation-delay: 0.9s;
}
.squareLoader .square:nth-child(4) {
  animation-delay: 1.2s;
}
  
@keyframes squareanim {
  0% {
    opacity: 1;
  }
  40% {
    opacity: 0;
  }
  50% {
    opacity: 0;
  }
  90% {
    opacity: 1;
  }
  100% {
    opacity: 1;
  }
}
              </style>
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<div class='squareLoader'>
  <div class='square'></div>
  <div class='square'></div>
  <div class='square'></div>
  <div class='square'></div>
</div>",
                  }
                }
              />
            </div>
          </div>
          <div
            className="grid_item_title"
          >
            <p
              className="text bold"
              style={
                Object {
                  "margin": 0,
                }
              }
            >
              Square
            </p>
          </div>
        </a>
      </div>
      <div
        className="grid_item"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <a
          href="/loaders/heartbeat"
          onClick={[Function]}
          style={
            Object {
              "margin": 0,
            }
          }
        >
          <div
            className="loader_container"
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#9a40a9",
                "display": "flex",
                "flex": "1",
                "height": "10em",
                "justifyContent": "center",
              }
            }
          >
            <div>
              <style>
                .heartbeatLoader {
  width: 4em;
  height: 4em;
  position: relative;
}
.heartbeatLoader .pulse {
  width: 4em;
  height: 4em;
  border-radius: 50%;
  position: absolute;
  background-color: white;
  animation: heartbeatanim 1.2s ease-in-out infinite;
  transform: scale(0);
  outline: 1px solid transparent;
}
.heartbeatLoader .pulse:nth-child(2) {
  animation-delay: 0.22s;
}
@keyframes heartbeatanim {
  0% {
    transform: scale(0);
  }
  100% {
    transform: scale(1);
    opacity: 0;
  }
}
              </style>
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<div class=\\"heartbeatLoader\\">
  <div class=\\"pulse\\"></div>
  <div class=\\"pulse\\"></div>
</div>",
                  }
                }
              />
            </div>
          </div>
          <div
            className="grid_item_title"
          >
            <p
              className="text bold"
              style={
                Object {
                  "margin": 0,
                }
              }
            >
              Heartbeat
            </p>
          </div>
        </a>
      </div>
      <div
        className="grid_item"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <a
          href="/loaders/slider"
          onClick={[Function]}
          style={
            Object {
              "margin": 0,
            }
          }
        >
          <div
            className="loader_container"
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#714eaf",
                "display": "flex",
                "flex": "1",
                "height": "10em",
                "justifyContent": "center",
              }
            }
          >
            <div>
              <style>
                .sliderLoader {
  display: flex;
  justify-content: center;
  align-items: center;
}
.sliderLoader .rect {
  height: 20px;
  width: 8px;
  background-color: white;
  display: inline-block;
  animation: slideranim 1.4s ease-in-out infinite;
  margin-right: 4px;
}
.sliderLoader .rect:nth-child(1) {
  animation-delay: 0.15s;
}
.sliderLoader .rect:nth-child(2) {
  animation-delay: 0.3s;
}
.sliderLoader .rect:nth-child(3) {
  animation-delay: 0.45s;
}
.sliderLoader .rect:nth-child(4) {
  animation-delay: 0.6s;
}
.sliderLoader .rect:nth-child(5) {
  animation-delay: 0.75s;
}
@keyframes slideranim {
  0% {
    transform: scaleY(1);
  }
  25% {
    transform: scaleY(3);
  }
  50% {
    transform: scaleY(1);
  }
  100% {
    transform: scaleY(1);
  }
}
              </style>
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<div class='sliderLoader'>
  <div class='rect'></div>
  <div class='rect'></div>
  <div class='rect'></div>
  <div class='rect'></div>
  <div class='rect'></div>
</div>
        ",
                  }
                }
              />
            </div>
          </div>
          <div
            className="grid_item_title"
          >
            <p
              className="text bold"
              style={
                Object {
                  "margin": 0,
                }
              }
            >
              Slider
            </p>
          </div>
        </a>
      </div>
      <div
        className="grid_item"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <a
          href="/loaders/hollow_box"
          onClick={[Function]}
          style={
            Object {
              "margin": 0,
            }
          }
        >
          <div
            className="loader_container"
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#22958b",
                "display": "flex",
                "flex": "1",
                "height": "10em",
                "justifyContent": "center",
              }
            }
          >
            <div>
              <style>
                .hollowLoader {
  width: 3em;
  height: 3em;
  -webkit-animation: loaderAnim 1.25s infinite ease-in-out;
  animation: loaderAnim 1.25s infinite ease-in-out;
  outline: 1px solid transparent;
}
.hollowLoader .largeBox {
  height: 3em;
  width: 3em;
  background-color: #ECECEC;
  outline: 1px solid transparent;
  position: fixed;
}
.hollowLoader .smallBox {
  height: 3em;
  width: 3em;
  background-color: #22958b; //Change to colour of background
  position: fixed;
  z-index: 1;
  outline: 1px solid transparent;
  -webkit-animation: smallBoxAnim 1.25s alternate infinite ease-in-out;
  animation: smallBoxAnim 1.25s alternate infinite ease-in-out;
}
@-webkit-keyframes smallBoxAnim {
  0% {
    -webkit-transform: scale(0.2);
    transform: scale(0.2);
  }
  100% {
    -webkit-transform: scale(0.75);
    transform: scale(0.75);
  }
}
@keyframes smallBoxAnim {
  0% {
    -webkit-transform: scale(0.2);
    transform: scale(0.2);
  }
  100% {
    -webkit-transform: scale(0.75);
    transform: scale(0.75);
  }
}
@-webkit-keyframes loaderAnim {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(90deg);
    transform: rotate(90deg);
  }
}
@keyframes loaderAnim {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(90deg);
    transform: rotate(90deg);
  }
}
              </style>
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<div class=\\"hollowLoader\\">
  <div class=\\"largeBox\\"></div>
  <div class=\\"smallBox\\"></div>
</div>",
                  }
                }
              />
            </div>
          </div>
          <div
            className="grid_item_title"
          >
            <p
              className="text bold"
              style={
                Object {
                  "margin": 0,
                }
              }
            >
              Hollow Box
            </p>
          </div>
        </a>
      </div>
      <div
        className="grid_item"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <a
          href="/loaders/pulse"
          onClick={[Function]}
          style={
            Object {
              "margin": 0,
            }
          }
        >
          <div
            className="loader_container"
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#62af65",
                "display": "flex",
                "flex": "1",
                "height": "10em",
                "justifyContent": "center",
              }
            }
          >
            <div>
              <style>
                .pulseLoader {
  width: 4em;
  height: 4em;
  border-radius: 4em;
  background-color: white;
  outline: 1px solid transparent;
  animation: pulseanim 1.2s ease-in-out infinite;
}
@keyframes pulseanim {
  0% {
    transform: scale(0);
  }
  100% {
    transform: scale(1);
    opacity: 0;
  }
}
              </style>
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<div class='pulseLoader'></div>
    ",
                  }
                }
              />
            </div>
          </div>
          <div
            className="grid_item_title"
          >
            <p
              className="text bold"
              style={
                Object {
                  "margin": 0,
                }
              }
            >
              Pulse
            </p>
          </div>
        </a>
      </div>
      <div
        className="grid_item"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <a
          href="/loaders/bar"
          onClick={[Function]}
          style={
            Object {
              "margin": 0,
            }
          }
        >
          <div
            className="loader_container"
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#e6653c",
                "display": "flex",
                "flex": "1",
                "height": "10em",
                "justifyContent": "center",
              }
            }
          >
            <div>
              <style>
                .barLoader {
  width: 10em;
}
.barLoader .bar {
  width: 100%;
  opacity: 0;
  height: 1.5em;
  background: #fefefe;
  animation: baranim 2.5s infinite cubic-bezier(0.61, 0.33, 0.39, 0.79);
  transform-origin: 0% 50%;
}
@keyframes baranim {
  0% {
    transform: scaleX(0);
    opacity: 0;
  }
  5% {
    transform: scaleX(0);
    opacity: 0;
  }
  10% {
    opacity: 1;
  }
  90% {
    opacity: 1;
  }
  95% {
    transform: scaleX(1);
  }
  100% {
    transform: scaleX(1);
    opacity: 0;
  }
}
              </style>
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<div class=\\"barLoader\\">
  <div class=\\"bar\\"></div>
</div>",
                  }
                }
              />
            </div>
          </div>
          <div
            className="grid_item_title"
          >
            <p
              className="text bold"
              style={
                Object {
                  "margin": 0,
                }
              }
            >
              Bar
            </p>
          </div>
        </a>
      </div>
      <div
        className="grid_item"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <a
          href="/loaders/two_circles"
          onClick={[Function]}
          style={
            Object {
              "margin": 0,
            }
          }
        >
          <div
            className="loader_container"
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#263238",
                "display": "flex",
                "flex": "1",
                "height": "10em",
                "justifyContent": "center",
              }
            }
          >
            <div>
              <style>
                .twoCircleLoader {
  width: 4em;
  height: 4em;
  position: relative;
}
.twoCircleLoader .circle {
  width: 4em;
  height: 4em;
  border-radius: 4em;
  position: absolute;
  animation: load 3s infinite cubic-bezier(0.65, 0.05, 0.36, 1);
}
.twoCircleLoader .circle:nth-child(1) {
  background-color: #f1c40f;
  transform: scale(0);
  animation-delay: 1.5s;
}
.twoCircleLoader .circle:nth-child(2) {
  background-color: #de4e40;
}
@keyframes load {
  0% {
    transform: scale(0);
  }
  46% {
    transform: scale(1);
  }
  54% {
    transform: scale(1);
  }
  100% {
    transform: scale(0);
  }
}
              </style>
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<div class='twoCircleLoader'>
  <div class='circle'></div>
  <div class='circle'></div>
</div>
      ",
                  }
                }
              />
            </div>
          </div>
          <div
            className="grid_item_title"
          >
            <p
              className="text bold"
              style={
                Object {
                  "margin": 0,
                }
              }
            >
              Two Circles
            </p>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots MobileNav With Content 1`] = `
<div
  className="mobile_nav_container"
>
  <div
    className="mobile_nav_content"
  >
    <p>
      Animation Content
    </p>
  </div>
  <div
    className="mobile_nav_tabs"
  >
    <button
      className="mobile_nav_tab active"
      onClick={[Function]}
    >
      <div
        className="mobile_nav_tab_icon"
      >
        <svg
          baseProfile="tiny"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          version="1.2"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.396 18.433c2.641-2.574 6.604-6.433 6.604-6.433s-3.963-3.859-6.604-6.433c-.363-.349-.853-.567-1.396-.567-1.104 0-2 .896-2 2v10c0 1.104.896 2 2 2 .543 0 1.033-.218 1.396-.567z"
          />
        </svg>
      </div>
      <p
        className="mobile_nav_tab_name"
      >
        Animation
      </p>
    </button>
    <button
      className="mobile_nav_tab "
      onClick={[Function]}
    >
      <div
        className="mobile_nav_tab_icon"
      >
        <svg
          baseProfile="tiny"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          version="1.2"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.171 18c-.512 0-1.023-.195-1.414-.586l-4.414-4.414 4.414-4.414c.781-.781 2.049-.781 2.828 0 .781.781.781 2.047 0 2.828l-1.585 1.586 1.585 1.586c.781.781.781 2.047 0 2.828-.39.391-.902.586-1.414.586zM15.829 18c-.512 0-1.024-.195-1.414-.586-.781-.781-.781-2.047 0-2.828l1.585-1.586-1.585-1.586c-.781-.781-.781-2.047 0-2.828.779-.781 2.047-.781 2.828 0l4.414 4.414-4.414 4.414c-.39.391-.902.586-1.414.586z"
          />
        </svg>
      </div>
      <p
        className="mobile_nav_tab_name"
      >
        Code
      </p>
    </button>
    <button
      className="mobile_nav_tab "
      onClick={[Function]}
    >
      <div
        className="mobile_nav_tab_icon"
      >
        <svg
          baseProfile="tiny"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          version="1.2"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="5"
            cy="19"
            r="2.5"
          />
          <circle
            cx="5"
            cy="12"
            r="2.5"
          />
          <circle
            cx="5"
            cy="5"
            r="2.5"
          />
          <circle
            cx="12"
            cy="19"
            r="2.5"
          />
          <circle
            cx="12"
            cy="12"
            r="2.5"
          />
          <circle
            cx="12"
            cy="5"
            r="2.5"
          />
          <circle
            cx="19"
            cy="19"
            r="2.5"
          />
          <circle
            cx="19"
            cy="12"
            r="2.5"
          />
          <circle
            cx="19"
            cy="5"
            r="2.5"
          />
        </svg>
      </div>
      <p
        className="mobile_nav_tab_name"
      >
        Library
      </p>
    </button>
  </div>
</div>
`;

exports[`Storyshots Nav With Content 1`] = `
<nav
  className="nav"
>
  <p>
    Content
  </p>
</nav>
`;

exports[`Storyshots ScrollBox Default 1`] = `
<div
  className="scroll_box  "
>
  <div
    className="scroll_box_content"
  >
    <div
      style={
        Object {
          "height": "200%",
          "width": "200vw",
        }
      }
    >
      <p>
        TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots ScrollBox With X 1`] = `
<div
  className="scroll_box scroll-x "
>
  <div
    className="scroll_box_content"
  >
    <div
      style={
        Object {
          "height": "200%",
          "width": "200vw",
        }
      }
    >
      <p>
        TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots ScrollBox With Xand Y 1`] = `
<div
  className="scroll_box scroll-x scroll-y"
>
  <div
    className="scroll_box_content"
  >
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
    <p>
      TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
    </p>
  </div>
</div>
`;

exports[`Storyshots ScrollBox With Y 1`] = `
<div
  className="scroll_box  scroll-y"
>
  <div
    className="scroll_box_content"
  >
    <div
      style={
        Object {
          "height": "200%",
          "width": "200vw",
        }
      }
    >
      <p>
        TextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontentTextcontent
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tabs With Content 1`] = `
<div
  className="tabs_container"
>
  <div
    className="tabs"
  >
    <button
      className="tab active"
      onClick={[Function]}
    >
      HTML
    </button>
    <button
      className="tab "
      onClick={[Function]}
    >
      CSS
    </button>
    <button
      className="tab "
      onClick={[Function]}
    >
      SCSS
    </button>
  </div>
  <div
    className="tabs_content"
  >
    &lt;div class="hollowLoader"&gt;
  &lt;div class="largeBox"&gt;&lt;/div&gt;
  &lt;div class="smallBox"&gt;&lt;/div&gt;
&lt;/div&gt;
  </div>
</div>
`;
